--- a/Assignment/Gokuldass A (Team member 1)/Assignment - 1/index.html
+++ b/Assignment/Gokuldass A (Team member 1)/Assignment - 1/index.html
@@ -48,8 +48,8 @@
                   height="200" /></div>
             </div>
             <div class="col-lg-8 col-md-7 text-center text-md-start">
-              <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Tariq Jamal A</h2>
-              <p data-aos="fade-left" data-aos-delay="100">Full Stack Developer</p>
+              <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Gokuldass A</h2>
+              
             </div>
           </div>
         </div>
@@ -73,19 +73,19 @@
                   <div class="pb-1">Email</div>
                 </div>
                 <div class="col-sm-8">
-                  <div class="pb-1 text-secondary">tariq@gmail.com</div>
+                  <div class="pb-1 text-secondary">gokuldass@gmail.com</div>
                 </div>
                 <div class="col-sm-4">
                   <div class="pb-1">Phone</div>
                 </div>
                 <div class="col-sm-8">
-                  <div class="pb-1 text-secondary">+91 9876543021</div>
+                  <div class="pb-1 text-secondary">+91 8973687873</div>
                 </div>
                 <div class="col-sm-4">
                   <div class="pb-1">Address</div>
                 </div>
                 <div class="col-sm-8">
-                  <div class="pb-1 text-secondary">Ukkadam ,Coimbatore</div>
+                  <div class="pb-1 text-secondary">Ammapalayam ,Tirupur</div>
                 </div>
               </div>
             </div>
@@ -246,11 +246,11 @@
             <div class="col">
               <div class="mt-2">
                 <h3 class="h6">Address</h3>
-                <div class="pb-2 text-secondary">Ukkadam ,Coimbatore</div>
+                <div class="pb-2 text-secondary">Ammapalayam ,Tirupur</div>
                 <h3 class="h6">Phone</h3>
-                <div class="pb-2 text-secondary">+91 987654302</div>
+                <div class="pb-2 text-secondary">+91 8973687873</div>
                 <h3 class="h6">Email</h3>
-                <div class="pb-2 text-secondary">tariq@company.com</div>
+                <div class="pb-2 text-secondary">gokul@company.com</div>
               </div>
             </div>
           </div>
